objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Budget Confirmed</description>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Meeting_date__c</fullName>
        <label>Next Follow-up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Steps</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call back in 1 week</fullName>
                </value>
                <value>
                    <fullName>Call back in 2 weeks</fullName>
                </value>
                <value>
                    <fullName>Call back 1 month</fullName>
                </value>
                <value>
                    <fullName>Call back in 3 months</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>No action required</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
                <value>
                    <fullName>Test2</fullName>
                    <isActive>false</isActive>
                    <label>Test2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obstacle_Detail__c</fullName>
        <label>Obstacle Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Obstacle__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organisational change</fullName>
                </value>
                <value>
                    <fullName>Budget change</fullName>
                </value>
                <value>
                    <fullName>Personnel change</fullName>
                </value>
                <value>
                    <fullName>Process change</fullName>
                </value>
                <value>
                    <fullName>Evaluation not yet complete</fullName>
                </value>
                <value>
                    <fullName>Existing customer unhappy with [Product]</fullName>
                    <label>Existing customer is unhappy with [Product]</label>
                </value>
                <value>
                    <fullName>Existing customer is unhappy with [Finance]</fullName>
                </value>
                <value>
                    <fullName>Existing customer is unhappy with [Service]</fullName>
                </value>
                <value>
                    <fullName>Existing customer is unhappy with [Sales]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obstacle__c</fullName>
        <label>Obstacle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer deferred</fullName>
                </value>
                <value>
                    <fullName>Stock unavailable</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
                <value>
                    <fullName>Test2</fullName>
                    <isActive>false</isActive>
                    <label>Test2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>On Hold Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Ship_date__c</fullName>
        <label>Target Ship date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Close_Date_Cant_be_Less_than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>CloseDate &lt; Today()</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Close Date can not be earlier than Today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost(0%)&quot;) &amp;&amp; ISBLANK( Lost_Reason__c)</errorConditionFormula>
        <errorDisplayField>Lost_Reason__c</errorDisplayField>
        <errorMessage>You need to provide a Closed Lost reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Next_Meeting_dat_Cant_be_Less_than_Today</fullName>
        <active>true</active>
        <errorConditionFormula>Next_Meeting_date__c &lt; Today()</errorConditionFormula>
        <errorDisplayField>Next_Meeting_date__c</errorDisplayField>
        <errorMessage>Next Meeting Date can not be earlier than Today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_Mandatory_fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT( Obstacle__c ) )
&amp;&amp; On_hold__c= True</errorConditionFormula>
        <errorDisplayField>Obstacle__c</errorDisplayField>
        <errorMessage>Obstacle value cannot be blank when  &quot;On-Hold&quot; checkbox is marked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_Mandatory_fields_Next_Step</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(  Next_Step__c ) )
&amp;&amp; On_hold__c= True</errorConditionFormula>
        <errorDisplayField>Next_Step__c</errorDisplayField>
        <errorMessage>Next step value cannot be blanked when  &quot;On-Hold&quot; checkbox is marked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_Mandatory_fields_Obstacle_detail</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Obstacle__c,&quot;Customer deferred&quot; )&amp;&amp; NOT( ISBLANK(TEXT(Obstacle__c) ))&amp;&amp; ISBLANK(TEXT( Obstacle_Detail__c ) )</errorConditionFormula>
        <errorDisplayField>Obstacle_Detail__c</errorDisplayField>
        <errorMessage>Please enter Obstacle detail value for selected Obstacle</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_Stage_Change</fullName>
        <active>true</active>
        <errorConditionFormula>(ISCHANGED(StageName) || ISCHANGED( Probability ))
&amp;&amp; On_hold__c= True</errorConditionFormula>
        <errorMessage>Stage or Probability can not be changed when Opportunity is marked as On Hold.Please untick the On Hold checkbox to proceed to stage change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_Hold_close_date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(On_hold__c) &amp;&amp; On_hold__c = True &amp;&amp; NOT(ISCHANGED(CloseDate)) &amp;&amp; NOT(ISNEW() )</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Please adjust the close date as the opportunity is On Hold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_hold_Next_meeting_date_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(   Next_Meeting_date__c ) ) 
&amp;&amp; On_hold__c= True</errorConditionFormula>
        <errorDisplayField>Next_Meeting_date__c</errorDisplayField>
        <errorMessage>Next Meeting date cannot be blank when  &quot;On-Hold&quot; checkbox is marked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>On_hold_Reason_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Reason__c  ) 
&amp;&amp; On_hold__c= True</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>On Hold reason cannot be blank when &quot;On-Hold&quot; checkbox is marked</errorMessage>
    </validationRules>
</CustomObject>